# src/services/api/apis/CorrectApi.ts
@@ -1,0 +1,57 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Pretendent backend
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.3
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+import * as runtime from '../runtime';
+import {
+    Message,
+    MessageFromJSON,
+    MessageToJSON,
+    RightAnswersRes,
+    RightAnswersResFromJSON,
+    RightAnswersResToJSON,
+} from '../models';
+
+/**
+ * 
+ */
+export class CorrectApi extends runtime.BaseAPI {
+
+    /**
+     * List right Answers
+     */
+    async correctRaw(): Promise<runtime.ApiResponse<RightAnswersRes>> {
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        const response = await this.request({
+            path: `/correct`,
+            method: 'GET',
+            headers: headerParameters,
+            query: queryParameters,
+        });
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => RightAnswersResFromJSON(jsonValue));
+    }
+
+    /**
+     * List right Answers
+     */
+    async correct(): Promise<RightAnswersRes> {
+        const response = await this.correctRaw();
+        return await response.value();
+    }
+
+}
