# src/services/api/models/QuestionsRes.ts
@@ -1,0 +1,64 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Pretendent backend
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.3
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+import {
+    Questions,
+    QuestionsFromJSON,
+    QuestionsFromJSONTyped,
+    QuestionsToJSON,
+} from './';
+
+/**
+ * List of questions
+ * @export
+ * @interface QuestionsRes
+ */
+export interface QuestionsRes {
+    /**
+     * 
+     * @type {Array<Questions>}
+     * @memberof QuestionsRes
+     */
+    questions?: Array<Questions>;
+}
+
+export function QuestionsResFromJSON(json: any): QuestionsRes {
+    return QuestionsResFromJSONTyped(json, false);
+}
+
+export function QuestionsResFromJSONTyped(json: any, ignoreDiscriminator: boolean): QuestionsRes {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'questions': (json as Array<any>).map(QuestionsFromJSON),
+    };
+}
+
+export function QuestionsResToJSON(value?: QuestionsRes | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'Questions': value.questions === undefined ? undefined : ((value.questions as Array<any>).map(QuestionsToJSON)),
+    };
+}
+
+
