# src/services/api/models/User.ts
@@ -4,7 +4,7 @@
  * Pretendent backend
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
- * The version of the OpenAPI document: 0.1.2
+ * The version of the OpenAPI document: 0.1.3
  * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -14,7 +14,7 @@
 
 import { exists, mapValues } from '../runtime';
 /**
- * User
+ * User information
  * @export
  * @interface User
  */
@@ -72,7 +72,7 @@ export function UserFromJSONTyped(json: any, ignoreDiscriminator: boolean): User
         'email': json['email'],
         'telegram': json['telegram'],
         'timeCreate': !exists(json, 'timeCreate') ? undefined : (new Date(json['timeCreate'])),
-        'userGUID': json['userGUID'],
+        'userGUID': !exists(json, 'userGUID') ? undefined : json['userGUID'],
     };
 }
 
