# src/services/api/models/index.ts
@@ -1,4 +1,9 @@
 export * from './Answer'
 export * from './Answers'
 export * from './Message'
+export * from './Questions'
+export * from './QuestionsRes'
+export * from './Results'
+export * from './RightAnswersRes'
 export * from './User'
+export * from './UserRes'
